home page banner form ? spacing issue fixed

--- a/docroot/sites/all/themes/ambitious/css/layouts/topic-forum.css
+++ b/docroot/sites/all/themes/ambitious/css/layouts/topic-forum.css
@@ -2825,7 +2825,7 @@ fieldset {
 #slider-container form input[type="email"], #slider-container form input[type="text"], #slider-container form .select {
   float: left;
   clear: both;
-  width: 87%;
+  width: 86%;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
